# remote_monitor

./: .launchtest.CMakeLists.txt  .launchtest.package.xml  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  remote_monitor.rosinstall
config/: remote_monitor_client.yaml  third_robot_monitor.yaml  third_robot_monitor_client.yaml  third_robot_monitor_server.yaml
launch/: remote_monitor_client.launch  remote_monitor_client_gazebo.launch  remote_monitor_server.launch  remote_monitor_server_gazebo.launch  third_robot_monitor_client.launch  third_robot_monitor_server.launch
script/: vpn_setting_for_monitor_pc.sh
scripts/: vpn_setting_for_robot.sh
src/: monitor_client.cpp  monitor_server.cpp
test/: remote_monitor_client.test.xml  remote_monitor_server.test.xml  remote_monitor_server_gazebo.test.xml
